spade-tests/src/snapshots/spade_tests__ast_lowering__unused_attribute_errors_on_enum.snap
---
source: spade-tests/src/ast_lowering.rs
---
#[no_mangle]
enum MyEnum { }


error: no_mangle is not a valid attribute for enum
  ┌─ testinput:1:1
  │
1 │ #[no_mangle]
  │ ^^^^^^^^^^^^ Unsupported attribute for enum
