spade-tests/src/snapshots/spade_tests__ast_lowering__unused_attribute_errors_on_pipeline.snap
---
source: spade-tests/src/ast_lowering.rs
---
#[uwu]
pipeline(1) a(clk: clock) -> bool {reg; true}


error: Unknown attribute 'uwu'
  ┌─ testinput:1:3
  │
1 │ #[uwu]
  │   ^^^ Unrecognised attribute
